# Voxply-server

./: .gitignore  README.md  docker-compose.farm.yml  docker-compose.yml  openapi.yaml
.github/workflows/: build.yml  release.yml
docs/: identity.md
farm/: Cargo.toml  Dockerfile
farm/src/: server.rs
farm/src/db/: migrations.rs
farm/src/routes/: admin.rs  hubs.rs  mod.rs
farm/tests/: admin_flow.rs  hubs_flow.rs
hub/: Cargo.toml  Dockerfile  docker-compose.yml
hub/src/: cert_worker.rs  lib.rs  main.rs  permissions.rs  server.rs  state.rs
hub/src/auth/: handlers.rs  models.rs
hub/src/bots/: dispatch.rs  events.rs  mod.rs  token_expiry.rs
hub/src/db/: migrations.rs
hub/src/federation/: client.rs  handlers.rs
hub/src/routes/: badges.rs  bots.rs  certs.rs  channels.rs  chat_models.rs  games.rs  health.rs  hub.rs  messages.rs  mod.rs  moderation.rs  tags.rs  webhooks.rs  ws.rs
hub/tests/: alliance_flow.rs  auth_flow.rs  bots_flow.rs  certs_flow.rs  challenge_flow.rs  channel_depth_flow.rs  chat_flow.rs  dh_keys_flow.rs  directory_flow.rs  dms_flow.rs  federation_flow.rs  forum_flow.rs  friends_flow.rs  games_flow.rs  hub_admin_flow.rs  hub_icons_flow.rs  identity_flow.rs  invite_flow.rs  lobby_flow.rs  moderation_flow.rs  multi_device_auth.rs  pairing_flow.rs  pow_flow.rs  rate_limit_flow.rs  roles_flow.rs  screen_share_flow.rs  survey_flow.rs  tags_badges_flow.rs
seed/: Cargo.toml
seed/src/: lib.rs  main.rs  revalidation.rs  server.rs  state.rs
seed/src/db/: migrations.rs
seed/src/routes/: farms.rs  health.rs  mod.rs
seed/tests/: farms_flow.rs
