[package]
name = "voxply-farm"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "voxply-farm"
path = "src/main.rs"

[lib]
name = "voxply_farm"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
voxply-identity = { path = "../identity" }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
opentelemetry        = { workspace = true }
opentelemetry_sdk    = { workspace = true }
opentelemetry-otlp   = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
axum-test = "19"
tokio = { workspace = true }
