[package]
name = "voxply-seed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voxply-seed"
path = "src/main.rs"

[lib]
name = "voxply_seed"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
hex = "0.4"
rand = "0.8"
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
axum-test = "19"
tokio = { workspace = true }
